tests/snapshots/golden__website__.cursor__rules__default.mdc.snap
---
source: tests/golden.rs
expression: content
---
---
description: website agent policy rules
alwaysApply: true
---

# website — Agent Policy

Public marketing website and documentation.

## Commands

- Test: `npm test`
- Install: `npm install`
- Lint: `npm run lint`

## Edit permissions

You may freely edit:
- `src/**`
- `public/**`
- `docs/**`
- `content/**`

Do not modify without human review:
- `.github/workflows/**`
- `deployment.json`
- `functions/**`
- `package-lock.json`

## Constraints
- Never commit secrets or credentials.- Escalate protected path changes for human review.
