tests/snapshots/golden__website__.cursor__rules__docs_agent.mdc.snap
---
source: tests/golden.rs
expression: content
---
---
description: "website — docs_agent rules"
globs: "docs/**,content/**"
alwaysApply: false
---

# Role: `docs_agent`

This rule applies when editing files matching: `docs/**,content/**`

## Allowed paths for this role

- `docs/**`
- `content/**`

## Forbidden paths for this role

- `src/**`
- `functions/**`
- `.github/**`

---

*Defined in `agent-policy.yaml` → roles → docs_agent*
